@@ -62,7 +62,7 @@ set TZData(:America/Cuiaba) {
     {1036296000 -10800 1 AMST}
     {1045364400 -14400 0 AMT}
     {1064372400 -14400 0 AMT}
-    {1096862400 -14400 0 AMT}
+    {1096603200 -14400 0 AMT}
     {1099368000 -10800 1 AMST}
     {1108868400 -14400 0 AMT}
     {1129435200 -10800 1 AMST}
