@@ -95,7 +95,6 @@ set TZData(:America/Havana) {
     {1049587200 -14400 1 CDT}
     {1067126400 -18000 0 CST}
     {1081036800 -14400 1 CDT}
-    {1099180800 -18000 0 CST}
     {1112486400 -14400 1 CDT}
     {1130630400 -18000 0 CST}
     {1143936000 -14400 1 CDT}
